got three webpagees working but now need to sync them

--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "dependencies": {
     "react-multi-carousel": "^2.8.5",
     "react-native": "^0.76.1"
+  },
+  "devDependencies": {
+    "react-router-dom": "^6.28.0"
   }
 }
