--- a/3tvdemo/package.json
+++ b/3tvdemo/package.json
@@ -15,7 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "sidetask": "wait on http://localhost:3000 && node src/SecondMonitor.js && node src/thirdMonitor.js",
+    "start-all": "concurrently \"npm run sidetask\" \"npm start\" "
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-router-dom": "^6.28.0"
   }
 }
